--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,20 +4,56 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--<receiver android:name="com.felix.moviedb.moviedb.activities.PersonDetailsBioFragment.DataLoadedBroadcastReceiver"  android:exported="true">-->
+        <!--<intent-filter>-->
+            <!--<action android:name="com.felix.moviedb.moviedb.DATA_LOADED"/>-->
+        <!--</intent-filter>-->
+    <!--</receiver>-->
+
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.AppCompat.Light">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".activities.SearchResultActivity" />
         </activity>
-        <activity android:name=".activities.TvShowDetailsActivity"></activity>
+        <activity
+            android:name=".activities.TvShowDetailsActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".activities.MovieDetailsActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".activities.SearchResultActivity"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".activities.SearchResultActivity" />
+        </activity>
+        <activity android:name=".activities.PersonDetailsActivity" />
+        <activity android:name=".activities.PersonDetails2Activity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
     </application>
 
 </manifest>
